--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,14 @@ form  {
     width: 500px;
 
 }
+.col {
+    float: right;
+}
 .tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
-    width: 500px;
+
 }
 
 /* Style the buttons inside the tab */
@@ -25,6 +28,7 @@ form  {
 /* Change background color of buttons on hover */
 .tab button:hover {
     background-color: #ddd;
+    width: 200px;
 }
 
 /* Create an active/current tablink class */
